<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_artists"
            android:title="@string/naw_artist_title" />
        <item
            android:id="@+id/nav_albums"
            android:title="@string/nav_album_title" />
        <item
            android:id="@+id/nav_songs"
            android:title="@string/nav_song_title" />
        <item
            android:id="@+id/nav_playlists"
            android:title="@string/nav_playlist_title" />
        <item
            android:id="@+id/nav_rooms"
            android:title="@string/nav_room_title" />
        <item
            android:id="@+id/nav_room_groups"
            android:title="@string/nav_room_group_title" />

    </group>

</menu>
